Fix verify-image-signatures: Set mutateDigest to false for Audit mode
- Changed mutateDigest from true to false (required when validationFailureAction is Audit)
- Fixes clusterops-kyverno-policies Kustomization failure

--- a/region-usa/az1/_common/policies/kyverno/supply-chain/verify-image-signatures.yaml
+++ b/region-usa/az1/_common/policies/kyverno/supply-chain/verify-image-signatures.yaml
@@ -65,9 +65,10 @@ spec:
         #             issuer: "https://token.actions.githubusercontent.com"
 
         # Placeholder - replace with your configuration
+        # NOTE: mutateDigest must be false when validationFailureAction is Audit
         - imageReferences:
             - "docker.io/library/nginx:*"
-          mutateDigest: true
+          mutateDigest: false
           verifyDigest: true
           required: false  # Set to true when ready to enforce
 ---
