Update sealed-secrets scripts to use repo-contained paths
- Remove all references to /Users/deepak.muley/ws/nkp
- Use do-not-checkin-folder as default backup directory (within repo)
- Add regenerate-all-sealed-secrets.sh script for automated secret regeneration
- Make kubeconfig required parameter (no hardcoded defaults)
- All sealed secrets operations now contained within repository

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ region-usa/az1/_common/policies/gatekeeper/SECURITY-ROADMAP.md
 
 # Internal documentation (generated files, not for version control)
 docs/internal/
+
+# Do not checkin folder - contains plain text secrets (NEVER commit)
+do-not-checkin-folder/
