--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/ndk-config-overrides.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/ndk-config-overrides.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ndk-2.0.0-config-overrides
+  name: ndk-config-overrides
   namespace: dm-dev-workspace
 data:
   values.yaml: |
