Enable Nutanix AI application deployment

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ndk
   # DISABLED: Nutanix AI dependencies (must be deployed before nutanix-ai)
   # - nutanix-ai-dependencies
-  # DISABLED: Nutanix AI
-  # - nutanix-ai
+  # Nutanix AI
+  - nutanix-ai
