Enable Nutanix AI dependencies (required before nutanix-ai)

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   # NDK
   - ndk
-  # DISABLED: Nutanix AI dependencies (must be deployed before nutanix-ai)
-  # - nutanix-ai-dependencies
+  # Nutanix AI dependencies (must be deployed before nutanix-ai)
+  - nutanix-ai-dependencies
   # Nutanix AI
   - nutanix-ai
