--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # SealedSecret for NDK image pull credentials (applied to management cluster)
-  - ndk-image-pull-secret.yaml
+  - ndk-image-pull-sealed-secret.yaml
   # ClusterResourceSet to deploy NDK secrets to workload clusters (apply first)
   - ndk-workload-cluster-crs.yaml
   # NDK App Deployment
@@ -22,4 +22,4 @@ configMapGenerator:
       # Namespace YAML for workload clusters
       - namespace.yaml=ndk-namespace.yaml
       # SealedSecret YAML for workload clusters
-      - sealed-secret.yaml=ndk-image-pull-secret.yaml
+      - sealed-secret.yaml=ndk-image-pull-sealed-secret.yaml
