--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # SealedSecret for NAI image pull credentials (applied to management cluster)
-  - nai-image-pull-secret.yaml
+  - nai-image-pull-sealed-secret.yaml
   # ClusterResourceSet to deploy NAI secrets to workload clusters (apply first)
   - nai-workload-cluster-crs.yaml
   # NAI App Deployment
@@ -24,4 +24,4 @@ configMapGenerator:
       # Namespace YAML for workload clusters
       - namespace.yaml=nai-namespace.yaml
       # SealedSecret YAML for workload clusters
-      - sealed-secret.yaml=nai-image-pull-secret.yaml
+      - sealed-secret.yaml=nai-image-pull-sealed-secret.yaml
