Move Vault AppDeployment from dm-dev-workspace to kommander-workspace and configure for management cluster only

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/vault.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/vault.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
   name: vault
-  namespace: dm-dev-workspace
+  namespace: kommander
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
     kustomize.toolkit.fluxcd.io/prune: disabled
@@ -10,9 +10,8 @@ spec:
   appRef:
     kind: App
     name: vault-0.31.0
+  # Use host cluster selector to target management cluster
   clusterSelector:
-    matchExpressions:
-      - key: kommander.d2iq.io/cluster-name
-        operator: In
-        values:
-          - dm-nkp-workload-1
+    matchLabels:
+      kommander.d2iq.io/host: "true"
+
