--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - vault-namespace.yaml
   - vault.yaml
   - vault-unseal-keys-sealed-secret.yaml
   - vault-auto-unseal-job.yaml
