Temporarily disable vault-auto-unseal-job due to Kyverno webhook issue

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - vault-namespace.yaml
   - vault.yaml
   - vault-unseal-keys-sealed-secret.yaml
-  - vault-auto-unseal-job.yaml
+  # Temporarily disabled due to Kyverno webhook issue
+  # - vault-auto-unseal-job.yaml
 
