Exclude vault namespace from add-safe-to-evict Kyverno policy to fix Vault deployment

--- a/region-usa/az1/_common/policies/kyverno/best-practices/add-safe-to-evict.yaml
+++ b/region-usa/az1/_common/policies/kyverno/best-practices/add-safe-to-evict.yaml
@@ -30,6 +30,7 @@ spec:
           - resources:
               namespaces:
                 - kube-system
+                - vault
       preconditions:
         all:
           # Only mutate pods with emptyDir volumes
