--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/resourcequotas/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/resourcequotas/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
-  # Disabled: ResourceQuota blocks Kubemark hollow-node pods that don't have resource limits
-  # Re-enable when Kubemark supports resource specs or add a LimitRange first
-  # - dm-dev-workspace-quota.yaml
+resources:
+  # Re-enabled: LimitRange policy now provides default resource limits for pods
+  # This ResourceQuota increases secrets limit from 50 (default) to 200
+  - dm-dev-workspace-quota.yaml
 
