Add vault-kyverno-exception to kustomization

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/vault/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - vault-namespace.yaml
   - vault.yaml
   - vault-unseal-keys-sealed-secret.yaml
+  - vault-kyverno-exception.yaml
   # Temporarily disabled due to Kyverno webhook issue
   # - vault-auto-unseal-job.yaml
 
