Add Kyverno config override to exclude vault namespace from webhooks

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/kyverno/kyverno.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/dm-nkp-gitops-catalog-applications/kyverno/kyverno.yaml
@@ -14,3 +14,5 @@ spec:
   clusterSelector:
     matchLabels:
       kommander.d2iq.io/host: "true"
+  configOverrides:
+    name: kyverno-config-overrides
